--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,24 +1,32 @@
 version: 0.2
 
 phases:
-  install:
+  install: 
     runtime-versions:
-      docker: 18
-  pre_build:
+      php: 7.3
+  pre_build: # commands to be run before build
     commands:
-      - echo Logging in to Amazon ECR...
-      - $(aws ecr get-login --no-include-email --region ap-south-1)
-      - REPOSITORY_URI=015072495129.dkr.ecr.ap-south-1.amazonaws.com/test
-      - IMAGE_TAG=latest
-
+    - echo Logging in to Amazon ECR....
+    - aws --version
+    # login to Elastic container registry
+    - eval $(aws ecr get-login --region ap-south-1 --no-include-email | sed 's|https://||')
+    - REPOSITORY_URI=015072495129.dkr.ecr.ap-south-1.amazonaws.com/test
+    - IMAGE_TAG=latest
   build:
     commands:
-      - echo Build started on `date`
-      - echo Building the Docker image...          
-      - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
-      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+    - echo Build started on `date`
+    - echo installing composer..
+    - composer install
+    - echo creating .env file..
+    - cp .env.example .env
+    - echo generating app key
+    - php artisan key:generate
+    - echo Building the Docker image...
+    - docker build -t $REPOSITORY_URI:latest .
+    - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
-    commands:i
+    commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - docker image ls -a
+      - docker push $REPOSITORY_URI:$IMAGE_TAG 
