--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,4 +23,5 @@ phases:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
       - docker image ls -a
-      - docker push $REPOSITORY_URI:$IMAGE_TAG 
+      - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - printf '{"ImageURI":"image_URI"}' > imageDetail.json
