--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,7 +24,8 @@ phases:
       - echo Pushing the Docker image...
       - docker image ls -a
       - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - printf '{"ImageURI":"image_URI"}' > imageDetail.json
+      - printf '{"ImageURI":"$REPOSITORY_URI:$IMAGE_TAG"}'
+      - printf '{"ImageURI":"$REPOSITORY_URI:$IMAGE_TAG"}' > imageDetail.json
 artifacts:
   files:
     - imageDetail.json
